--- a/src/App/components/Detail/detail.css
+++ b/src/App/components/Detail/detail.css
@@ -1,10 +1,10 @@
 .detail {
-    background-color: #6e7075;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 0.5vmin);
-    color: white;
-  }
+  background-color: #6e7075;
+  display: flex;
+  flex: 0 0 50%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 0.5vmin);
+  color: white;
+}
